--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #DATASOURCE
 spring.datasource.url:jdbc:mysql://localhost:3306/grupo147?useSSL=false&allowPublic
 spring.datasource.username: root
-spring.datasource.password: 123456
+spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
-
+spring.jackson.time-zone: America/Argentina/Buenos_Aires
 #HIBERNATE
 spring.jpa.hibernate.ddl-auto: update
 spring.jpa.show-sql:true
