--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.datasource.url = jdbc:mysql://localhost:3306/grupo147?useSSL=false&allowPublic
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jackson.time-zone? = America/Argentina/Buenos_Aires
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = false
