--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
