--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,8 @@ spring.jpa.properties.hibernate.format_sql: false
 #SENDGRID
 app.sendgrid.key:
 app.sendgrid.from-address:
-
+#AMAZON S3
+endpointUrl=${endpointUrl}
+accessKey=${accessKey}
+secretKey=${secretKey}
+bucketName=${bucketName}
