--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.jpa.properties.hibernate.format_sql: false
 #SENDGRID
 app.sendgrid.key:
 app.sendgrid.from-address:
+#JWT
+jwt.secret = 
+jwt.authorization = 
 
