--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.format_sql: false
 app.sendgrid.key:
 app.sendgrid.from-address:
 #AMAZON S3
-endpointUrl=${endpointUrl}
-accessKey=${accessKey}
-secretKey=${secretKey}
-bucketName=${bucketName}
+endpointUrl=${ENDPOINT_URL}
+accessKey=${ACCESS_KEY}
+secretKey=${SECRET_KEY}
+bucketName=${BUCKET_NAME}
