actulizando rama local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.jpa.properties.hibernate.format_sql: false
 app.sendgrid.key:
 app.sendgrid.from-address:
 #JWT
-jwt.secret =${SECRET} 
-jwt.authorization ={AUTHORIZATION}
+jwt.secret = secret
+jwt.authorization =Authorization
 
 #AMAZON S3
-endpointUrl=${ENDPOINT_URL}
-accessKey=${ACCESS_KEY}
-secretKey=${SECRET_KEY}
-bucketName=${BUCKET_NAME}
+ENDPOINT_URL=s3.amazonaws.com
+ACCESS_KEY=AKIAS2JWQJCDIGZRCIJY
+SECRET_KEY=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
+BUCKET_NAME=cohorte-febrero-b35bfd02
 
