Fixes in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ app.sendgrid.key:
 app.sendgrid.from-address:
 #JWT
 jwt.secret =${SECRET}
-jwt.authorization ={AUTHORIZATION}
+jwt.authorization =${AUTHORIZATION}
 
 #AMAZON S3
 endpointUrl=${ENDPOINT_URL}
