--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.properties.hibernate.format_sql: false
 app.sendgrid.key:
 app.sendgrid.from-address:
 #JWT
-jwt.secret =${SECRET} 
-jwt.authorization ={AUTHORIZATION}
+jwt.secret =${SECRET}
+jwt.authorization =${AUTHORIZATION}
 
 #AMAZON S3
 endpointUrl=${ENDPOINT_URL}
