--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.jpa.hibernate.ddl-auto: update
 spring.jpa.show-sql:true
 spring.jpa.properties.hibernate.format_sql: false
 #SENDGRID
-app.sendgrid.key:
-app.sendgrid.from-address:
+app.sendgrid.key: ${KEY}
+app.sendgrid.from: ${MAIL_ONG}
 #JWT
 jwt.secret =${SECRET}
-jwt.authorization =${AUTHORIZATION}
+jwt.authorization =Authorization
 
 #AMAZON S3
 endpointUrl=${ENDPOINT_URL}
