Configuration Swagger for documentation(Ticket complete OT-147-84)

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.11.133</version>
 		</dependency>
+		<!-- Swagger-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
